# -agent

./: .env.example  .gitignore  README.md  index.html  omega.cmd  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.js  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  index.html  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/entropy/: Cargo.toml
src-tauri/crates/entropy/src/: lib.rs
src-tauri/crates/harness/: Cargo.toml
src-tauri/crates/harness/src/: engine.rs  golden.rs  lib.rs  patterns.rs  persistence.rs  repeated.rs  rules.rs  scoring.rs  structural.rs  taste.rs
src-tauri/crates/mcp/: Cargo.toml
src-tauri/crates/mcp/src/: lib.rs  skills.rs  transport.rs
src-tauri/crates/memory/: Cargo.toml
src-tauri/crates/memory/src/: lib.rs
src-tauri/crates/omega-table/: Cargo.toml
src-tauri/crates/omega-table/src/: index.rs  lib.rs
src-tauri/crates/providers/: Cargo.toml
src-tauri/crates/providers/src/: anthropic.rs  google.rs  lib.rs  local.rs  mistral.rs  openai.rs
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/commands/: chat.rs  gate.rs  mcp.rs  memory.rs  mod.rs  tables.rs  tools.rs
src-tauri/src/pipeline/: build.rs  mod.rs  plan.rs  review.rs  state.rs
src-tauri/src/tui/: diff_renderer.rs  gate_table.rs  mod.rs  permission_prompt.rs  status_bar.rs  theme.rs  timeline.rs
src/components/: ChatPanel.tsx  ReviewPanel.tsx  SettingsPanel.tsx
src/hooks/: useChat.ts
src/lib/: tauri.ts  types.ts
src/stores/: chatStore.ts
