[workspace]
members = ["crates/harness", "crates/entropy", "crates/omega-table", "crates/providers", "crates/memory", "crates/mcp"]

[package]
name = "omega-agent"
version = "0.1.0"
description = "Omega Agent - AI coding assistant with multi-agent orchestration"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "omega_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tokio = { version = "1", features = ["full"] }
regex = "1.0"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
directories = "5"

harness = { path = "crates/harness" }
entropy = { path = "crates/entropy" }
omega-table = { path = "crates/omega-table" }
providers = { path = "crates/providers" }
memory = { path = "crates/memory" }
mcp = { path = "crates/mcp" }
